add dictionary delete function
